syntax = "proto3";

option csharp_namespace = "Gateway.Protos.Auth";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc GetUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  string refresh_token = 4;
  int64 expires_in = 5;
  User user = 6;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string role = 4;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
  User user = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  string refresh_token = 4;
  int64 expires_in = 5;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message GetUserProfileRequest {
  int64 user_id = 1;
}

message GetUserProfileResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  bool is_active = 5;
  string last_login = 6;
  string created_at = 7;
}
